Fix unwanted horizontal scrollbars on the map in mobile

--- a/source/stylesheets/risky.css.scss
+++ b/source/stylesheets/risky.css.scss
@@ -135,12 +135,13 @@ ol {
   width: 700px;
   height: 660px;
   position: relative;
-  padding: 3px;
+  padding: 0;
 }
 
 @media (max-width: 727px) {
   #map {
     overflow-x: auto; /* scroll on mobile */
+    height: 680px; /* add some height to accomodate the horizontal scroll bar */
   }
 }
 
@@ -425,8 +426,8 @@ p.id.mid {
 /* position all parts of map in the same position as the map */
 #walls, #paths, #territories, #mines, #castles {
   position: absolute;
-  top: 3px;
-  left: 3px;
+  top: 0;
+  left: 0;
   width: 700px;
   height: 660px;
 }
